--- a/Components/Pages/JournalPinChallengeDialog.razor
+++ b/Components/Pages/JournalPinChallengeDialog.razor
@@ -3,7 +3,7 @@
 <MudDialog>
     <DialogContent>
         <div class="d-flex flex-column align-center pa-4">
-            <MudIcon Icon="@Icons.Material.Filled.Lock" Color="Color.Warning" Size="Size.Large" Class="mb-4" />
+            <MudIcon Icon="@Icons.Material.Rounded.Lock" Color="Color.Warning" Size="Size.Large" Class="mb-4" />
             <MudText Typo="Typo.h6" Class="fw-bold mb-2">Unlock Entry</MudText>
             <MudText Typo="Typo.body2" Align="Align.Center" Class="opacity-70 mb-6">This entry is locked. Enter the PIN to continue.</MudText>
             
