--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -38,7 +38,7 @@ Its purpose is to act as a Router/Redirector based on Auth state.
 
     .spinner {
         border: 4px solid #E7ECF3;
-        border-top: 4px solid #6B7FD1;
+        border-top: 4px solid var(--primary-color);
         border-radius: 50%;
         width: 40px;
         height: 40px;
